--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+
+div{
+  border:none !important;
+  background-color: none !important;
+  border-radius: 12px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.close{
+  width:100%;
+  height:100%;
+  background-color: none;
+  position: absolute;
+  top:0
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper{
   display: flex;
+  flex: 1; 
   flex-direction: column;
+  width: 250px !important;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 12px;
+  box-shadow: rgb(0 0 0 / 4%) 0 4px 20px 0;
+}
+
+.images{
+  position: relative;
+  width: 100%;
+
+  /* padding-top: 52.1921%; */
+  object-fit: cover;
+}
+
+.bottom{
+  display: flex;
+  flex: 1 1 0%;
+  flex-direction: column;
+  padding: 12px 16px;
+  background-color: white;
+}
+
+.titleWrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.day{
+  font-size: 14px;
+  color:#8c8c8c;
+}
+
+.title{
+  margin-bottom:8px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+
+.place{
+  display: flex;
+  gap:4px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom:4px;
+  font-size: 14px;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+.date{
+  font-size: 12px;
+  color:#a6a6a6;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.more{
+  font-size: 14px;
+  color:#595959;
+  z-index: 2;
+  position: absolute;
+  right: 16px;
+  bottom:8px;
+}
+
+.dateWrap {
+  display: flex;
+  justify-content: space-between;
 }
