fix: safari에서 날짜 오류를 수정하다

--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,7 @@
   display: flex;
   align-items: center;
   color:#FB356E; 
+  white-space: nowrap;
 }
 
 .drawer-title{
@@ -219,6 +220,7 @@
   font-weight: 600;
   margin-bottom: 4px;
   color:#1a1a1a;
+  white-space: pre-wrap;
 }
 
 .drawer-place{
